k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kreo-marketplace
  labels:
    name: kreo-marketplace
    environment: production
